[tool.poetry]
name = "gpt4-on-demand"
version = "0.1.0"
description = ""
authors = ["Manuel Reber <manilireb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.348"
python-dotenv = "^1.0.0"
openai = "^1.3.8"
fastapi = {extras = ["all"], version = "^0.105.0"}
pydantic = "^2.5.2"
tiktoken = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
